# minifs

./: CMakeLists.txt  Makefile  README.md
include/minifs/: constants.h  disk.h  errors.h  high_level.h  utils.h
include/minifs/core/: bitmap.h  block.h  directory.h  file.h  i_node.h  superblock.h
src/: CMakeLists.txt  disk.c  main.c  utils.c
src/core/: bitmap.c  block.c  superblock.c
src/core/directory/: clear.c  existant.c  get_file_i_node.c  get_files_list.c  get_number_of_files.c  manage_file_in_subdirs.c  register_file.c
src/core/file/: existant.c  get_contents.c  get_length.c  manage_block_data.c  overwrite.c
src/core/i_node/: existance.c  manage_block_count.c
src/high_level/: directory.c  file.c  filesystem.c
